делает липкий футер на всех страницах

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
       </nav>
     </div>
   </header>
-  <main class="catalog-main">
+  <main class="page__main catalog-main">
     <section class="catalog">
       <div class="content-container">
         <h1 class="catalog__title title">Каталог продукции</h1>
