--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
       </nav>
     </div>
   </header>
-  <main class="form-main">
+  <main class="page__main form-main">
     <section class="program-selection">
       <div class="content-container">
         <h1 class="program-selection__title title">Подбор программы</h1>
