--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
       </nav>
     </div>
   </header>
-  <main class="index-main">
+  <main class="page__main index-main">
     <section class="promo">
       <div class="content-container">
         <h1 class="promo__title title">Функциональное питание для котов</h1>
