--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page__body">
+<body class="page__body body">
   <header class="header">
     <div class="content-container">
       <a class="header__logo logo" href="index.html">
