делает стилизацию шапки

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 
 <body class="page__body body">
   <header class="header">
-    <div class="content-container">
+    <div class="content-container header__wrapper">
       <a class="header__logo logo" href="index.html">
         <img class="logo__img" src="#" width="" height=""
           alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
