--- a/source/index.html
+++ b/source/index.html
@@ -36,13 +36,13 @@
     </div>
   </header>
   <main class="page__main index-main">
-    <section class="promo">
+    <section class="promo index-main__promo">
       <div class="content-container">
-        <h1 class="promo__title title">Функциональное питание для котов</h1>
+        <h1 class="promo__title title title--light">Функциональное<br> питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <a class="promo__button button" href="form.html">Подобрать программу</a>
         <img class="promo__img promo-img" src="#"
           alt="Оранжевая банка питания для котов «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
+        <a class="promo__button button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="products">
