делает стилизацию для программ питания

--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
         <a class="promo__button button" href="form.html">Подобрать программу</a>
       </div>
     </section>
-    <section class="products">
+    <section class="products index-main__products">
       <div class="content-container">
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="products__list">
