--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
     </div>
   </header>
   <main class="page__main index-main">
-    <section class="promo index-main__promo">
+    <section class="index-main__promo promo">
       <div class="content-container">
         <h1 class="promo__title title title--light">Функциональное<br> питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
@@ -45,7 +45,7 @@
         <a class="promo__button button" href="form.html">Подобрать программу</a>
       </div>
     </section>
-    <section class="products index-main__products">
+    <section class="index-main__products products">
       <div class="content-container">
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="products__list">
@@ -65,7 +65,7 @@
         </ul>
       </div>
     </section>
-    <section class="feature">
+    <section class="index-main__feature feature">
       <div class="content-container">
         <h2 class="feature__title">Как это работает</h2>
         <ul class="feature__list">
