делает стилизацию блока с живым примером

--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
         </ul>
       </div>
     </section>
-    <section class="demo">
+    <section class="index-main__demo demo">
       <div class="content-container">
         <h2 class="demo__title">Живой пример</h2>
         <p class="demo__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
