правит регистр текста

--- a/source/index.html
+++ b/source/index.html
@@ -95,11 +95,11 @@
         <dl class="demo__option demo-option">
           <div class="demo-option__item">
             <dt class="demo-option__value">5 кг</dt>
-            <dd class="demo-option__desc">снижение веса</dd>
+            <dd class="demo-option__desc">Снижение веса</dd>
           </div>
           <div class="demo-option__item">
             <dt class="demo-option__value">60 дней</dt>
-            <dd class="demo-option__desc">затрачено времени</dd>
+            <dd class="demo-option__desc">Затрачено времени</dd>
           </div>
           <div class="demo-option__item demo-option__results">
             <dt class="demo-option__title">Затраты на питание:</dt>
@@ -115,7 +115,7 @@
       <div class="content-container">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__content">
-          <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
+          <h3 class="contacts__title">Приглашаем<br> к сотрудничеству дилеров!</h3>
           <address class="contacts__address-street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
         <div class="contacts__map location-map"></div>
