--- a/source/index.html
+++ b/source/index.html
@@ -123,11 +123,13 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="content-container">
-      <a class="footer__logo logo" href=" index.html">
-        <img class="logo__type" src="#" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
-      </a>
-      <div class="footer__social social">
+    <div class="footer__wrapper content-container">
+      <div class="footer__item">
+        <a class="footer__logo logo" href=" index.html">
+          <img class="logo__type" src="#" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
+        </a>
+      </div>
+      <div class="footer__item social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
@@ -146,7 +148,7 @@
           </li>
         </ul>
       </div>
-      <div class="footer__copyright copyright">
+      <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/">
           <svg></svg>
