--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 
 <body class="page__body body">
   <header class="header">
-    <div class="content-container header__wrapper">
+    <div class="header__wrapper content-container">
       <a class="header__logo logo" href="index.html">
         <img class="logo__img" src="#" width="" height=""
           alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
@@ -70,15 +70,19 @@
         <h2 class="feature__title">Как это работает</h2>
         <ul class="feature__list">
           <li class="feature__item feature__item--nutrients">
+            <div class="feature__icon"></div>
             <p class="feature__text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="feature__item feature__item--consistency">
+            <div class="feature__icon"></div>
             <p class="feature__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
           <li class="feature__item feature__item--meal">
+            <div class="feature__icon"></div>
             <p class="feature__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
           <li class="feature__item feature__item--period">
+            <div class="feature__icon"></div>
             <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
