делает карточки товаров в каталоге

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
 
 <body class="page__body body">
   <header class="header">
-    <div class="content-container">
+    <div class="header__wrapper content-container">
       <a class="header__logo logo" href="index.html">
         <img class="logo__img" src="#" width="" height=""
           alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
@@ -37,7 +37,7 @@
   </header>
   <main class="page__main catalog-main">
     <section class="catalog">
-      <div class="content-container">
+      <div class="catalog__wrapper content-container">
         <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
@@ -222,7 +222,7 @@
               </div>
               <a class="product-card__button button" href="#">Заказать</a>
             </li>
-            <li class="catalog__item catalog__item--show-more more-products">
+            <li class="catalog__item product-card product-card--show-more more-products">
               <h2 class="more-products__title">Показать еще 100500 товаров</h2>
               <p class="more-products__subtitle">На самом деле вкусов гораздо больше!</p>
               <a class="more-products__button button button--accessory" href="#">Показать все</a>
