делает стилизацию блока дополнительных товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -269,7 +269,7 @@
         </ul>
         <div class="add-products__gift catalog-gift">
           <span class="catalog-gift__icon"></span>
-          <p class="catalog-gift__slogan">Закажите все и получите чехол для кота в подарок!</p>
+          <p class="catalog-gift__slogan">Закажите все<br> и получите чехол для<br> кота в подарок!</p>
         </div>
       </div>
     </section>
