--- a/source/catalog.html
+++ b/source/catalog.html
@@ -273,7 +273,7 @@
         </div>
       </div>
     </section>
-    <section class="contacts">
+    <section class="contacts contacts--dark-theme">
       <div class="content-container">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__content">
