--- a/source/form.html
+++ b/source/form.html
@@ -87,8 +87,8 @@
             <ul class="form-contacts__list">
               <li class="form-contacts__item">
                 <label class="form-contacts__label" for="email_form">E-mail:<sup>*</sup></label>
-                <input class="form-contacts__input form-contacts__input--email" type="email" name="email" id="email_form"
-                  placeholder="kuklachev@gmail.com" required>
+                <input class="form-contacts__input form-contacts__input--email" type="email" name="email"
+                  id="email_form" placeholder="kuklachev@gmail.com" required>
               </li>
               <li class="form-contacts__item">
                 <label class="form-contacts__label" for="phone_form">Телефон:<sup>*</sup></label>
