вносит правки в код

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -75,7 +75,7 @@
               <a class="product-card__link">
                 <h2 class="product-card__title">Cat Energy PRO 1000&nbsp;г</h2>
               </a>
-              <dl class="product-card__dl product-detail">
+              <dl class="product-card__detail product-detail">
                 <div class="product-detail__item">
                   <dt class="product-detail__name">Масса</dt>
                   <dd class="product-detail__value">1000&nbsp;г</dd>
@@ -101,7 +101,7 @@
               <a class="product-card__link">
                 <h2 class="product-card__title">Cat Energy PRO 500&nbsp;г</h2>
               </a>
-              <dl class="product-card__dl product-detail">
+              <dl class="product-card__detail product-detail">
                 <div class="product-detail__item">
                   <dt class="product-detail__name">Масса</dt>
                   <dd class="product-detail__value">500&nbsp;г</dd>
@@ -127,7 +127,7 @@
               <a class="product-card__link">
                 <h2 class="product-card__title">Cat Energy PRO 1000&nbsp;г</h2>
               </a>
-              <dl class="product-card__dl product-detail">
+              <dl class="product-card__detail product-detail">
                 <div class="product-detail__item">
                   <dt class="product-detail__name">Масса</dt>
                   <dd class="product-detail__value">1000&nbsp;г</dd>
@@ -153,7 +153,7 @@
               <a class="product-card__link">
                 <h2 class="product-card__title">Cat Energy slim 500&nbsp;г</h2>
               </a>
-              <dl class="product-card__dl product-detail">
+              <dl class="product-card__detail product-detail">
                 <div class="product-detail__item">
                   <dt class="product-detail__name">Масса</dt>
                   <dd class="product-detail__value">500&nbsp;г</dd>
@@ -179,7 +179,7 @@
               <a class="product-card__link">
                 <h2 class="product-card__title">Cat Energy slim 1000&nbsp;г</h2>
               </a>
-              <dl class="product-card__dl product-detail">
+              <dl class="product-card__detail product-detail">
                 <div class="product-detail__item">
                   <dt class="product-detail__name">Масса</dt>
                   <dd class="product-detail__value">1000&nbsp;г</dd>
@@ -205,7 +205,7 @@
               <a class="product-card__link">
                 <h2 class="product-card__title">Cat Energy slim 500&nbsp;г</h2>
               </a>
-              <dl class="product-card__dl product-detail">
+              <dl class="product-card__detail product-detail">
                 <div class="product-detail__item">
                   <dt class="product-detail__name">Масса</dt>
                   <dd class="product-detail__value">500&nbsp;г</dd>
