меняет отступы в карточках товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,7 @@
   </header>
   <main class="page__main catalog-main">
     <section class="catalog">
-      <div class="catalog__wrapper content-container">
+      <div class="content-container">
         <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
