делает сетку блока преимуществ

--- a/source/index.html
+++ b/source/index.html
@@ -70,21 +70,21 @@
       <div class="content-container">
         <h2 class="feature__title">Как это работает</h2>
         <ul class="feature__list">
-          <li class="feature__item feature__item--nutrients">
-            <div class="feature__icon"></div>
+          <li class="feature__item">
+            <div class="feature__icon feature__icon--nutrients"></div>
             <p class="feature__text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
-          <li class="feature__item feature__item--consistency">
-            <div class="feature__icon"></div>
+          <li class="feature__item">
+            <div class="feature__icon feature__icon--consistency"></div>
             <p class="feature__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
-          <li class="feature__item feature__item--meal">
-            <div class="feature__icon"></div>
+          <li class="feature__item">
+            <div class="feature__icon feature__icon--meal"></div>
             <p class="feature__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
-          <li class="feature__item feature__item--period">
-            <div class="feature__icon"></div>
-            <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <li class="feature__item">
+            <div class="feature__icon feature__icon--period"></div>
+            <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</p>
           </li>
         </ul>
       </div>
