--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
     <div class="footer__wrapper content-container">
       <div class="footer__item">
         <a class="footer__logo logo" href=" index.html">
-          <img class="logo__type" src="#" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
+          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
         </a>
       </div>
       <div class="footer__item social">
@@ -156,7 +156,7 @@
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/">
-          <svg></svg>
+          <img src="img/htmlacademy-trial.png">
         </a>
       </div>
     </div>
