вносит правки в футер всех страниц

--- a/source/form.html
+++ b/source/form.html
@@ -149,11 +149,13 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="content-container">
-      <a class="footer__logo logo" href=" index.html">
-        <img class="logo__type" src="#" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
-      </a>
-      <div class="footer__social social">
+    <div class="footer__wrapper content-container">
+      <div class="footer__item">
+        <a class="footer__logo logo" href=" index.html">
+          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
+        </a>
+      </div>
+      <div class="footer__item social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
@@ -172,10 +174,10 @@
           </li>
         </ul>
       </div>
-      <div class="footer__copyright copyright">
+      <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/">
-          <svg></svg>
+          <img src="img/htmlacademy-trial.png">
         </a>
       </div>
     </div>
