делает сетку для карточек товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,13 +37,13 @@
     </div>
   </header>
   <main class="page__main catalog-main">
-    <section class="catalog">
+    <section class="catalog-main__products catalog">
       <div class="content-container">
         <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
             <a class="product-card__img-link">
-              <img class="product-card__img" src="#" width="#" height="#"
+              <img class="product-card__img" src="#" width="#" height="172"
                 alt="Оранжевая банка корма «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
@@ -67,9 +67,9 @@
             </div>
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
-          <li class="catalog__item product-card">
+          <li class="catalog__item product-card product-card--size-xl">
             <a class="product-card__img-link">
-              <img class="product-card__image" src="#" width="#" height="#"
+              <img class="product-card__image" src="img/catalog-6-desktop.png" width="#" height="200"
                 alt="Оранжевая банка корма «CAT ENERGY PRO» со вкусом курицы 1000 грамм.">
             </a>
             <div class="product-card__wrapper-content">
@@ -95,7 +95,7 @@
           </li>
           <li class="catalog__item product-card">
             <a class="product-card__img-link">
-              <img class="product-card__image" src="#" width="#" height="#"
+              <img class="product-card__image" src="#" width="#" height="172"
                 alt="Зеленая банка корма «CAT ENERGY PRO» со вкусом рыбы 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
@@ -119,9 +119,9 @@
             </div>
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
-          <li class="catalog__item product-card">
+          <li class="catalog__item product-card product-card--size-xl">
             <a class="product-card__img-link">
-              <img class="product-card__image" src="#" width="#" height="#"
+              <img class="product-card__image" src="#" width="#" height="200"
                 alt="Зеленая банка корма «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
             </a>
             <div class="product-card__wrapper-content">
@@ -147,7 +147,7 @@
           </li>
           <li class="catalog__item product-card">
             <a class="product-card__img-link">
-              <img class="product-card__image" src="#" width="#" height="#"
+              <img class="product-card__image" src="#" width="#" height="172"
                 alt="Голубая банка корма «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
@@ -171,9 +171,9 @@
             </div>
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
-          <li class="catalog__item product-card">
+          <li class="catalog__item product-card product-card--size-xl">
             <a class="product-card__img-link">
-              <img class="product-card__image" src="#" width="#" height="#"
+              <img class="product-card__image" src="#" width="#" height="200"
                 alt="Голубая банка корма «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
             </a>
             <div class="product-card__wrapper-content">
@@ -199,7 +199,7 @@
           </li>
           <li class="catalog__item product-card">
             <a class="product-card__img-link">
-              <img class="product-card__image" src="#" width="#" height="#"
+              <img class="product-card__image" src="#" width="#" height="172"
                 alt="Фиолетовая банка корма «CAT ENERGY PRO» со вкусом риса 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
