делает сетку дополнительных товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -231,46 +231,48 @@
         </ul>
       </div>
     </section>
-    <section class="add-products">
+    <section class="catalog-main__add-products add-products">
       <div class="content-container">
         <h2 class="add-products__title">Дополнительные товары</h2>
-        <ul class="add-products__list">
-          <li class="add-products__item add-product">
-            <h3 class="add-product__title">Сахарозаменитель</h3>
-            <dl class="add-product__detail">
-              <dt class="add-product__serving-size">1 упаковка (100 г)</dt>
-              <dd class="add-product__price">200 ₽</dd>
-            </dl>
-            <button class="add-product__button button" type="button">Заказать</button>
-          </li>
-          <li class="add-products__item add-product">
-            <h3 class="add-product__title">Питьевая вода</h3>
-            <dl class="add-product__detail">
-              <dt class="add-product__serving-size">5 литров</dt>
-              <dd class="add-product__price">50 ₽</dd>
-            </dl>
-            <button class="add-product__button button" type="button">Заказать</button>
-          </li>
-          <li class="add-products__item add-product">
-            <h3 class="add-product__title">Молоко</h3>
-            <dl class="add-product__detail">
-              <dt class="add-product__serving-size">1 литр</dt>
-              <dd class="add-product__price">100 ₽</dd>
-            </dl>
-            <button class="add-product__button button" type="button">Заказать</button>
-          </li>
-          <li class="add-products__item add-product">
-            <h3 class="add-product__title">Витамины</h3>
-            <dl class="add-product__detail">
-              <dt class="add-product__serving-size">1 упаковка (30 г)</dt>
-              <dd class="add-product__price">300 ₽</dd>
-            </dl>
-            <button class="add-product__button button" type="button">Заказать</button>
-          </li>
-        </ul>
-        <div class="add-products__gift catalog-gift">
-          <span class="catalog-gift__icon"></span>
-          <p class="catalog-gift__slogan">Закажите все<br> и получите чехол для<br> кота в подарок!</p>
+        <div class="add-products__wrapper">
+          <ul class="add-products__list">
+            <li class="add-products__item add-product">
+              <h3 class="add-product__title">Сахарозаменитель</h3>
+              <dl class="add-product__detail">
+                <dt class="add-product__serving-size">1 упаковка (100&nbsp;г)</dt>
+                <dd class="add-product__price">200&nbsp;₽</dd>
+              </dl>
+              <button class="add-product__button button" type="button">Заказать</button>
+            </li>
+            <li class="add-products__item add-product">
+              <h3 class="add-product__title">Питьевая вода</h3>
+              <dl class="add-product__detail">
+                <dt class="add-product__serving-size">5&nbsp;литров</dt>
+                <dd class="add-product__price">50&nbsp;₽</dd>
+              </dl>
+              <button class="add-product__button button" type="button">Заказать</button>
+            </li>
+            <li class="add-products__item add-product">
+              <h3 class="add-product__title">Молоко</h3>
+              <dl class="add-product__detail">
+                <dt class="add-product__serving-size">1&nbsp;литр</dt>
+                <dd class="add-product__price">100&nbsp;₽</dd>
+              </dl>
+              <button class="add-product__button button" type="button">Заказать</button>
+            </li>
+            <li class="add-products__item add-product">
+              <h3 class="add-product__title">Витамины</h3>
+              <dl class="add-product__detail">
+                <dt class="add-product__serving-size">1 упаковка (30&nbsp;г)</dt>
+                <dd class="add-product__price">300&nbsp;₽</dd>
+              </dl>
+              <button class="add-product__button button" type="button">Заказать</button>
+            </li>
+          </ul>
+          <div class="add-products__gift catalog-gift">
+            <span class="catalog-gift__icon"></span>
+            <p class="catalog-gift__slogan">Закажите все<br> и получите чехол для<br> кота в подарок!</p>
+          </div>
         </div>
       </div>
     </section>
@@ -289,7 +291,8 @@
     <div class="footer__wrapper content-container">
       <div class="footer__item">
         <a class="footer__logo logo" href=" index.html">
-          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
+          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#"
+            alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
         </a>
       </div>
       <div class="footer__item social">
