делает адаптив для секции контактов

--- a/source/form.html
+++ b/source/form.html
@@ -140,13 +140,13 @@
       </div>
     </section>
     <section class="contacts contacts--dark-theme">
-      <div class="content-container">
-        <h2 class="visually-hidden">Наши контакты</h2>
-        <div class="contacts__content">
-          <h3 class="contacts__text">Приглашаем к сотрудничеству дилеров!</h3>
-          <address class="contacts__address-street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        </div>
-        <div class="contacts__map location-map"></div>
+      <div class="contacts__content">
+        <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
+        <address class="contacts__address-street">ул. Большая<br> Конюшенная, д. 19/8
+          <span class="contacts__address-city">Санкт&#8209Петербург</span>
+        </address>
+      </div>
+      <div class="contacts__map location-map"></div>
       </div>
     </section>
   </main>
