--- a/source/index.html
+++ b/source/index.html
@@ -106,11 +106,11 @@
             <dt class="demo-option__value">60 дней</dt>
             <dd class="demo-option__desc">Затрачено времени</dd>
           </div>
-          <div class="demo-option__item demo-option__results">
-            <dt class="demo-option__title">Затраты на питание:</dt>
-            <dd class="demo-option__price">15 000 РУБ.</dd>
-          </div>
         </dl>
+        <div class="demo-option__results">
+          <p class="demo-option__title">Затраты на питание:</p>
+          <p class="demo-option__price">15 000 РУБ.</p>
+        </div>
         <div class="demo__slider cat-slider">
           <img class="cat-slider__img" src="#" alt="">
         </div>
@@ -120,8 +120,10 @@
       <div class="content-container">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__content">
-          <h3 class="contacts__title">Приглашаем<br> к сотрудничеству дилеров!</h3>
-          <address class="contacts__address-street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+          <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
+          <address class="contacts__address-street">ул. Большая<br> Конюшенная, д. 19/8
+            <span class="contacts__address-city">Санкт&#8209Петербург</span>
+          </address>
         </div>
         <div class="contacts__map location-map"></div>
       </div>
@@ -131,7 +133,8 @@
     <div class="footer__wrapper content-container">
       <div class="footer__item">
         <a class="footer__logo logo" href=" index.html">
-          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#" alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
+          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#"
+            alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
         </a>
       </div>
       <div class="footer__item social">
