--- a/source/index.html
+++ b/source/index.html
@@ -38,10 +38,10 @@
   </header>
   <main class="page__main index-main">
     <section class="index-main__promo promo">
-      <div class="content-container">
+      <div class="promo__container content-container">
         <h1 class="promo__title title title--light">Функциональное<br> питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <img class="promo__img promo-img" src="#"
+        <img class="promo__img promo-img" src="img/index-can-desk.png"
           alt="Оранжевая банка питания для котов «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
         <a class="promo__button button" href="form.html">Подобрать программу</a>
       </div>
@@ -84,7 +84,7 @@
           </li>
           <li class="feature__item">
             <div class="feature__icon feature__icon--period"></div>
-            <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</p>
+            <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
       </div>
