правит разметку на всех страницах

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,10 +24,10 @@
         </button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            <a class="site-list__link site-list__link--active" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Подбор программы</a>
@@ -42,12 +42,12 @@
         <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__img" src="#" width="#" height="172"
                 alt="Оранжевая банка корма «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy PRO 500&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -68,12 +68,12 @@
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product-card product-card--size-xl">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__image" src="img/catalog-6-desktop.png" width="#" height="200"
                 alt="Оранжевая банка корма «CAT ENERGY PRO» со вкусом курицы 1000 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy PRO 1000&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -94,12 +94,12 @@
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__image" src="#" width="#" height="172"
                 alt="Зеленая банка корма «CAT ENERGY PRO» со вкусом рыбы 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy PRO 500&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -120,12 +120,12 @@
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product-card product-card--size-xl">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__image" src="#" width="#" height="200"
                 alt="Зеленая банка корма «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy PRO 1000&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -146,12 +146,12 @@
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__image" src="#" width="#" height="172"
                 alt="Голубая банка корма «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy slim 500&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -172,12 +172,12 @@
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product-card product-card--size-xl">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__image" src="#" width="#" height="200"
                 alt="Голубая банка корма «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy slim 1000&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -198,12 +198,12 @@
             <a class="product-card__button button" href="#">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a class="product-card__img-link">
+            <a class="product-card__img-link" href="#">
               <img class="product-card__image" src="#" width="#" height="172"
                 alt="Фиолетовая банка корма «CAT ENERGY PRO» со вкусом риса 500 грамм.">
             </a>
             <div class="product-card__wrapper-content">
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <h2 class="product-card__title">Cat Energy slim 500&nbsp;г</h2>
               </a>
               <dl class="product-card__detail product-detail">
@@ -242,7 +242,7 @@
                 <dt class="add-product__serving-size">1 упаковка (100&nbsp;г)</dt>
                 <dd class="add-product__price">200&nbsp;₽</dd>
               </dl>
-              <button class="add-product__button button" type="button">Заказать</button>
+              <a class="add-product__button button" href="#">Заказать</a>
             </li>
             <li class="add-products__item add-product">
               <h3 class="add-product__title">Питьевая вода</h3>
@@ -250,7 +250,7 @@
                 <dt class="add-product__serving-size">5&nbsp;литров</dt>
                 <dd class="add-product__price">50&nbsp;₽</dd>
               </dl>
-              <button class="add-product__button button" type="button">Заказать</button>
+              <a class="add-product__button button" href="#">Заказать</a>
             </li>
             <li class="add-products__item add-product">
               <h3 class="add-product__title">Молоко</h3>
@@ -258,7 +258,7 @@
                 <dt class="add-product__serving-size">1&nbsp;литр</dt>
                 <dd class="add-product__price">100&nbsp;₽</dd>
               </dl>
-              <button class="add-product__button button" type="button">Заказать</button>
+              <a class="add-product__button button" href="#">Заказать</a>
             </li>
             <li class="add-products__item add-product">
               <h3 class="add-product__title">Витамины</h3>
@@ -266,7 +266,7 @@
                 <dt class="add-product__serving-size">1 упаковка (30&nbsp;г)</dt>
                 <dd class="add-product__price">300&nbsp;₽</dd>
               </dl>
-              <button class="add-product__button button" type="button">Заказать</button>
+              <a class="add-product__button button" href="#">Заказать</a>
             </li>
           </ul>
           <div class="add-products__gift catalog-gift">
@@ -282,7 +282,7 @@
         <div class="contacts__content">
           <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
           <address class="contacts__address-street">ул. Большая<br> Конюшенная, д. 19/8
-            <span class="contacts__address-city">Санкт&#8209Петербург</span>
+            <span class="contacts__address-city">Санкт&#8209;Петербург</span>
           </address>
         </div>
         <div class="contacts__map location-map"></div>
