--- a/source/form.html
+++ b/source/form.html
@@ -24,13 +24,13 @@
         </button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Подбор программы</a>
+            <a class="site-list__link site-list__link--active" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -86,7 +86,7 @@
             </fieldset>
           </div>
           <fieldset class="program-selection__group form__contacts form-contacts">
-            <legend class="form__title form-contacts__title">Контактные данные (владельца&nbspкота)</legend>
+            <legend class="form__title form-contacts__title">Контактные данные (владельца&nbsp;кота)</legend>
             <ul class="form-contacts__list">
               <li class="form-contacts__item">
                 <label class="form-contacts__label" for="email_form">E-mail:<sup>*</sup></label>
@@ -140,13 +140,15 @@
       </div>
     </section>
     <section class="contacts contacts--dark-theme">
-      <div class="contacts__content">
-        <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
-        <address class="contacts__address-street">ул. Большая<br> Конюшенная, д. 19/8
-          <span class="contacts__address-city">Санкт&#8209Петербург</span>
-        </address>
-      </div>
-      <div class="contacts__map location-map"></div>
+      <div class="content-container">
+        <h2 class="visually-hidden">Наши контакты</h2>
+        <div class="contacts__content">
+          <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
+          <address class="contacts__address-street">ул. Большая<br> Конюшенная, д. 19/8
+            <span class="contacts__address-city">Санкт&#8209;Петербург</span>
+          </address>
+        </div>
+        <div class="contacts__map location-map"></div>
       </div>
     </section>
   </main>
