--- a/source/index.html
+++ b/source/index.html
@@ -55,13 +55,13 @@
             <p class="products__subtitle">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора
               на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="products__link" href="#">Каталог slim</a>
+            <a class="products__link" href="catalog/slim.html">Каталог slim</a>
           </li>
           <li class="products__item products__item--pro">
             <h3 class="products__title">Набор массы</h3>
             <p class="products__subtitle">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
               поможет вашему коту нарастить необходимые мышцы!.</p>
-            <a class="products__link" href="#">Каталог pro</a>
+            <a class="products__link" href="catalog/pro.html">Каталог pro</a>
           </li>
         </ul>
       </div>
@@ -122,7 +122,7 @@
         <div class="contacts__content">
           <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
           <address class="contacts__address-street">ул. Большая<br> Конюшенная, д. 19/8
-            <span class="contacts__address-city">Санкт&#8209Петербург</span>
+            <span class="contacts__address-city">Санкт&#8209;Петербург</span>
           </address>
         </div>
         <div class="contacts__map location-map"></div>
