--- a/source/index.html
+++ b/source/index.html
@@ -90,26 +90,27 @@
       </div>
     </section>
     <section class="index-main__demo demo">
-      <div class="content-container">
-        <h2 class="demo__title">Живой пример</h2>
-        <p class="demo__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-          Slim.
-          Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
-          часов
-          в день.</p>
-        <dl class="demo__option demo-option">
-          <div class="demo-option__item">
-            <dt class="demo-option__value">5 кг</dt>
-            <dd class="demo-option__desc">Снижение веса</dd>
-          </div>
-          <div class="demo-option__item">
-            <dt class="demo-option__value">60 дней</dt>
-            <dd class="demo-option__desc">Затрачено времени</dd>
-          </div>
-        </dl>
-        <div class="demo-option__results">
-          <p class="demo-option__title">Затраты на питание:</p>
-          <p class="demo-option__price">15 000 РУБ.</p>
+      <div class="demo__container content-container">
+        <div class="demo__content-wrapper">
+          <h2 class="demo__title title">Живой пример</h2>
+          <p class="demo__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит
+            по 16
+            часов в день.</p>
+          <dl class="demo__option demo-option">
+            <div class="demo-option__feature">
+              <dt class="demo-option__value">5 кг</dt>
+              <dd class="demo-option__desc">Снижение веса</dd>
+            </div>
+            <div class="demo-option__feature">
+              <dt class="demo-option__value">60 дней</dt>
+              <dd class="demo-option__desc">Затрачено времени</dd>
+            </div>
+            <div class="demo-option__results">
+              <dt class="demo-option__title">Затраты на питание:</dt>
+              <dd class="demo-option__price">15&nbsp;000&nbsp;РУБ.</dd>
+            </div>
+          </dl>
         </div>
         <div class="demo__slider cat-slider">
           <img class="cat-slider__img" src="#" alt="">
